--- a/src/ros_pkg/ros2_sub/config/ekf.yaml
+++ b/src/ros_pkg/ros2_sub/config/ekf.yaml
@@ -5,7 +5,7 @@ ekf_filter_node:
 # The frequency, in Hz, at which the filter will output a position estimate. Note that the filter will not begin
 # computation until it receives at least one message from one of the inputs. It will then run continuously at the
 # frequency specified here, regardless of whether it receives more measurements. Defaults to 30 if unspecified.
-        frequency: 30.0
+        frequency: 60.0
 
 # The period, in seconds, after which we consider a sensor to have timed out. In this event, we carry out a predict
 # cycle on the EKF without correcting it. This parameter can be thought of as the minimum frequency with which the
@@ -132,7 +132,7 @@ ekf_filter_node:
                       false,  false,   true,
                       false,  false,  false,
                       false,  false,  false ,
-                      false,  false,  false]
+                      true,  false,  false]
         imu0_nodelay: false
         imu0_differential: false
         imu0_relative: true
@@ -143,7 +143,7 @@ ekf_filter_node:
 
 # [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
 # this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
-        imu0_remove_gravitational_acceleration: true
+        imu0_remove_gravitational_acceleration: false
 
 # [ADVANCED]  The EKF and UKF models follow a standard predict/correct cycle. During prediction, if there is no
 # acceleration reference, the velocity at time t+1 is simply predicted to be the same as the velocity at time t. During
