--- a/src/ros_pkg/ros2_sub/config/ekf.yaml
+++ b/src/ros_pkg/ros2_sub/config/ekf.yaml
@@ -86,9 +86,9 @@ ekf_filter_node:
 # do not provide some of the state variables estimated by the filter. For example, a TwistWithCovarianceStamped message
 # has no pose information, so the first six values would be meaningless in that case. Each vector defaults to all false
 # if unspecified, effectively making this parameter required for each sensor.
-        odom0_config: [false, false, false,
+        odom0_config: [true,  true, false,
                        false, false, false,
-                       true, false, false,
+                       false, false, false,
                        false, false, false,
                        false, false, false]
 
@@ -132,7 +132,7 @@ ekf_filter_node:
                       false,  false,   true,
                       false,  false,  false,
                       false,  false,  false ,
-                      true,  false,  false]
+                      false,  false,  false]
         imu0_nodelay: false
         imu0_differential: false
         imu0_relative: true
